Fix elements spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,7 +284,7 @@ input[type="radio"]+label {
 }
 
 .radio_buttons {
-  padding-bottom: 4rem;
+  padding-bottom: 2rem;
 }
 
 .account_type {
